# qtjack_midi_soundpult

./: CMakeLists.txt  README.md
include/: instruments.yaml  instruments_list.h  mainwindow.h  sequenzer_backend.h  sound_dispatcher.h  soundpult_widget.h
src/: instruments_list.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  sequenzer_backend.cpp  sound_dispatcher.cpp  soundpult_widget.cpp
